# frontmatter-validator

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  specs.yaml
src/: main.py
src/frontmatter_validator/: cli.py  logic.py  schema.py
tests/: test_cli.py  test_logic.py
